fixing syntax highlight word wrap

--- a/src/files/website/css/main.css
+++ b/src/files/website/css/main.css
@@ -17,6 +17,9 @@ pre code {
   display: block;
   padding: 0.5em;
   background: #272822;
+  white-space: pre;
+  word-break: normal;
+  word-wrap: normal;
 }
 
 pre .tag,
